replaced deprecated call and corrected constructor visibility